Update pom.xml dependencies and use checkstyle and spotbugs

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ local.properties
 # External tool builders
 .externalToolBuilders/
 
+.checkstyle
+
 # Locally stored "Eclipse launch configurations"
 *.launch
 
