Create ReplicaSets based on the Kind StackGresCluster

--- a/example/stackgres_v1alpha1_sgcluster_cr.yaml
+++ b/example/stackgres_v1alpha1_sgcluster_cr.yaml
@@ -1,6 +1,7 @@
 apiVersion: stackgres.io/v1alpha1
 kind: StackGresCluster
 metadata:
-  name: stackgres-cluster
+  clusterName: stackgrescl
+  name: stackgres-cluster1
 spec:
-  size: 2
+  instances: 3
