--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-# Configuration file
-# key = value
+#
+# Copyright (C) 2019 OnGres, Inc.
+# SPDX-License-Identifier: AGPL-3.0-or-later
+#
+
+# Quarkus Configuration
 quarkus.http.port=8080
 quarkus.http.test-port=8082
+quarkus.log.category."io.stackgres".level=DEBUG
 
-# Your configuration properties
+# StackGres Configuration
 stackgres.namespace = stackgres
