Use two Service for primary and replica

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
@@ -200,7 +200,7 @@
                 </requireJavaVersion>
                 <requireProperty>
                   <property>java.vm.name</property>
-                  <regex>^OpenJDK GraalVM.*</regex>
+                  <regex>^OpenJDK.*GraalVM.*</regex>
                   <regexMessage>GraalVM is required to compile.</regexMessage>
                 </requireProperty>
                 <!--
