Update example Custom Resource

--- a/example/stackgres_v1alpha1_sgcluster_cr.yaml
+++ b/example/stackgres_v1alpha1_sgcluster_cr.yaml
@@ -1,7 +1,6 @@
 apiVersion: stackgres.io/v1alpha1
 kind: StackGresCluster
 metadata:
-  clusterName: stackgrescl
-  name: stackgres-cluster1
+  name: stackgres-example
 spec:
   instances: 3
