--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 # Quarkus Configuration
 quarkus.http.port=8080
 quarkus.http.test-port=8082
-quarkus.log.category."io.stackgres".level=DEBUG
+%dev.quarkus.log.category."io.stackgres".level=DEBUG
 
 # StackGres Configuration
 stackgres.namespace = stackgres
