--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
     <quarkus.version>0.18.0</quarkus.version>
     <kubernetes-client.version>4.3.0</kubernetes-client.version>
     <spotbugs.version>3.1.12</spotbugs.version>
-    <guava.version>27.1-jre</guava.version>
-    <checkstyle.version>8.21</checkstyle.version>
+    <guava.version>28.0-jre</guava.version>
+    <checkstyle.version>8.22</checkstyle.version>
     <checker.version>2.8.2</checker.version>
     <!-- Plugins versions -->
     <enforcer-plugin.version>3.0.0-M2</enforcer-plugin.version>
@@ -93,10 +93,6 @@
         <exclusion>
           <groupId>com.google.guava</groupId>
           <artifactId>listenablefuture</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.checkerframework</groupId>
-          <artifactId>checker-qual</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -284,7 +280,7 @@
                 </goals>
                 <configuration>
                   <enableHttpUrlHandler>true</enableHttpUrlHandler>
-                  <additionalBuildArgs>-H:IncludeResources='.*/banner.txt$'</additionalBuildArgs>
+                  <additionalBuildArgs>-H:IncludeResources=.*/banner.txt,-H:Log=registerResource:verbose</additionalBuildArgs>
                 </configuration>
               </execution>
             </executions>
