--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@
 #
 
 # Quarkus Configuration
+quarkus.application.name=${project.artifactId}
+quarkus.application.version=${project.version}
 quarkus.http.port=8080
 quarkus.http.test-port=8082
 %dev.quarkus.log.category."io.stackgres".level=DEBUG
