--- a/src/main/docker/Dockerfile.multistage
+++ b/src/main/docker/Dockerfile.multistage
@@ -8,7 +8,7 @@ COPY pom.xml /usr/src/app
 RUN mvn -f /usr/src/app/pom.xml -Pnative clean package
 
 ## Stage 2 : create the container final image
-FROM registry.access.redhat.com/ubi8/ubi-minimal
+FROM registry.access.redhat.com/ubi8-minimal
 WORKDIR /work/
 COPY --from=build /usr/src/app/target/*-runner /work/application
 RUN chmod 775 /work
