--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -9,15 +9,18 @@
 # Then, build the image with:
 #
 # docker build -f src/main/docker/Dockerfile.native -t stackgres/stackgres-operator .
+# buildah bud -f src/main/docker/Dockerfile.native -t stackgres/operator:0.5 .
 #
 # Then run the container using:
 #
 # docker run -i --rm -p 8080:8080 stackgres/stackgres-operator
 #
 ###
-FROM registry.access.redhat.com/ubi8/ubi-minimal
+FROM registry.access.redhat.com/ubi8-minimal
 WORKDIR /work/
 COPY target/*-runner /work/application
+COPY target/javalib/libsunec.so /app/library/
+COPY target/cacerts /app/cert/cacerts
 RUN chmod 775 /work
 EXPOSE 8080
-CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
+CMD ["./application", "-Dquarkus.http.host=0.0.0.0", "-Djava.library.path=/app/library", "-Djavax.net.ssl.trustStore=/app/cert/cacert"]
