--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,13 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <tagNameFormat>@{project.version}</tagNameFormat>
+          <scmCommentPrefix>[Release] </scmCommentPrefix>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
