--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.stackgres</groupId>
   <artifactId>stackgres-operator</artifactId>
-  <version>0.5alpha1-SNAPSHOT</version>
+  <version>0.5alpha1</version>
 
   <inceptionYear>2019</inceptionYear>
 
@@ -25,6 +23,7 @@
   <scm>
     <url>https://gitlab.com/stackgres/stackgres</url>
     <developerConnection>scm:git:git@gitlab.com:stackgres/stackgres.git</developerConnection>
+    <tag>0.5alpha1</tag>
   </scm>
 
   <properties>
