Include example of Deployment.yaml to deploy the operator en K8s
Closes #7

Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
           <tagNameFormat>@{project.version}</tagNameFormat>
+          <pushChanges>false</pushChanges>
         </configuration>
       </plugin>
     </plugins>
