Add postgres-util sidecar container
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@
 # Quarkus Configuration
 quarkus.application.name=${project.artifactId}
 quarkus.application.version=${project.version}
+quarkus.kubernetes.group=stackgres.io
 quarkus.http.port=8080
 quarkus.http.test-port=8082
 %dev.quarkus.log.category."io.stackgres".level=DEBUG
