Write detailed README
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ enforce release:
     - tags
 
 oci-image deploy:
-  image: quay.io/openshift-pipeline/buildah:stable
+  image: docker.io/ongres/builder:latest
   stage: deploy
   tags:
     - stackgres-runner
