--- a/example/kubernetes.yaml
+++ b/example/kubernetes.yaml
@@ -48,7 +48,7 @@ items:
             valueFrom:
               fieldRef:
                 fieldPath: "metadata.namespace"
-          image: "stackgres/operator:0.5alpha1"
+          image: "stackgres/operator:0.5"
           imagePullPolicy: "IfNotPresent"
           livenessProbe:
             httpGet:
