Revert the usage of quarkus.application.version not working in native-image
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,7 @@
 #
 
 # Quarkus Configuration
-quarkus.application.name=${project.artifactId}
-quarkus.application.version=${project.version}
+quarkus.application.name=stackgres-operator
 quarkus.kubernetes.group=stackgres.io
 quarkus.http.port=8080
 quarkus.http.test-port=8082
